--- a/packages/web/src/globals.css
+++ b/packages/web/src/globals.css
@@ -101,6 +101,29 @@
   }
 }
 
+/* By making scroll bar always present, prevents x-axis layout shift when content exceeds viewport */
 html {
   overflow-y: scroll;
+}
+
+/* Prevents mobile browsers from auto-zooming on input fields */
+/* by maintaining 16px font size in these input types */
+/* From: https://github.com/ethanniser/NextFaster/blob/main/src/app/globals.css#L80-L97 */
+input[type="color"],
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"],
+select:focus,
+textarea {
+  font-size: 16px;
 }
